# Solver

./: .atom-build.json  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  PuzzleTemplate.xlsx  README.md  build.sh
inc/: cell.h  cellGroup.h  possibilities.h  puzzle.h  puzzleio.h  solver.h  sudoku.h
solver-cli/: CMakeLists.txt
solver-cli/src/: main.cpp
solver-cli/test/: evil_puzzle.csv
src/: CMakeLists.txt  cell.cpp  cellGroup.cpp  main.cpp  possibilities.cpp  puzzle.cpp  puzzleio.cpp  solver.cpp
sudoku/: CMakeLists.txt
sudoku/inc/: sudoku.h
sudoku/inc/sudoku/: io.h  solver.h
sudoku/inc/sudoku/impl/: io.h
sudoku/src/: io.cpp  solver.cpp
sudoku/test/: io.spec.cpp  solver.spec.cpp
test/: CMakeLists.txt  cellGroup_tests.cpp  cell_tests.cpp  main.cpp  possiblities_tests.cpp  puzzle.spec.cpp  puzzle_tests.cpp  puzzleio_tests.cpp  solver.spec.cpp  solver_tests.cpp  temp.cpp  test_puzzles.cpp
